Se integra funcionalidad modal_details

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
   <main>
     <section class="section">
-      <!-- <div class="products"></div>
-      </div> -->
+      <div class="products"></div>
+      </div>
     </section>
-
+    <section class="modal">
+      <div class="modal_product"></div>
+    </section>
   </main>
   <footer>
   </footer>
